# strength-difficulties-questionnaire

./: .env  Dockerfile.java  Dockerfile.rust  Master Data Record for 28.6 Final.xlsx  README.md  build.gradle  example.xlsx  example1.xlsx  example2.xlsx  justfile
adapters/incoming/service/service-rest-adapter/: build.gradle
adapters/outgoing/parse-file/xslx-parse-file/: build.gradle
adapters/outgoing/repository/repository-sql-adapter/: build.gradle
domain/utils/: build.gradle
local/: Caddyfile  docker-compose.test.yaml  docker-compose.yaml
local/auth/: ratracejoe-realm.json  ratracejoe-users-0.json
sdq-analysis/: .env  Dockerfile  Makefile  build.gradle  entrypoint.sh  example.xlsx  justfile  package-lock.json  package.json  sdq-analysis.db  settings.gradle
sdq-analysis/adapters/repository/repository-sql-adapter/: build.gradle
sdq-analysis/adapters/service/service-rest-adapter/: build.gradle
sdq-analysis/domain/model/: build.gradle
sdq-analysis/domain/use-cases/: build.gradle
sdq-analysis/local/: docker-compose.test.yaml  docker-compose.yaml
sdq-analysis/local/auth/: ratracejoe-realm.json
sdq-analysis/sdq-database/: .env  Dockerfile  docker-compose.yaml  liquibase.properties
sdq-analysis/sdq-database/liquibase/changelog/: db.changelog-master.yaml  init_client_table.yaml  (+7 more)
sdq-analysis/sdq-ui/: index.html  package-lock.json  package.json
sdq-analysis/sdq-ui/src/: App.tsx  index.css  main.tsx
sdq-analysis/spring-app/: build.gradle
sdq-api-java/: settings.gradle
sdq-api-java/domain/model/: build.gradle
sdq-api-java/spring-app/: build.gradle
sdq-api-rust/: Cargo.toml  Dockerfile
sdq-api-rust/.sqlx/: query-090aabfef826fd793a215969d4ea8db6f9011c4b7a099859db5168a0c62987c5.json  query-1525a7858af398181780ac4dc18e756cb23ac4369ba5caf1f64b6f2bf74144f0.json
sdq-api-rust/api/: Cargo.toml
sdq-api-rust/api/src/: admin_api.rs  api_error.rs  build_api.rs  client_api.rs  enum_value.rs  goal_api.rs  lib.rs  reference_api.rs  sdq_api.rs  upload_api.rs
sdq-api-rust/app/: Cargo.toml
sdq-api-rust/app/src/: main.rs
sdq-api-rust/app/tests/: test_client_service.rs
sdq-api-rust/app/tests/common/: mod.rs
sdq-api-rust/db/: Cargo.toml
sdq-api-rust/db/src/: client_service.rs  column_name.rs  gbo_service.rs  goal_service.rs  increment_index.rs  lib.rs  reporting_period_service.rs  sdq_service.rs  statement_service.rs  upload_service.rs
sdq-api-rust/db/tests/: test_client_service.rs
sdq-api-rust/model/: Cargo.toml
sdq-api-rust/model/src/: lib.rs
sdq-api-rust/service/: Cargo.toml
sdq-api-rust/service/src/: client.rs  gbo.rs  goal.rs  lib.rs  reporting_period.rs  sdq.rs  statement.rs  upload.rs
sdq-api-rust/src/: main.rs
sdq-database/liquibase/changelog/: db.changelog-master.yaml  init_aces_table.yaml  init_client_table.yaml  init_disability_table.yaml  init_goal_based_outcome_table.yaml  init_intervention_table.yaml  init_reporting_period_table.yaml  init_sdq_category_table.yaml  init_sdq_statement_table.yaml  init_sdq_summary_view.yaml  init_sdq_table.yaml
sdq-ui/: package-lock.json  package.json  vite.config.ts
sdq-ui/src/: App.tsx  AppLayout.tsx  main.tsx
sdq-ui/src/api/: types.ts  useClientFileApi.ts  useReferenceApi.ts  useUploadApi.ts
sdq-ui/src/styles/: forms.scss  index.scss  tables.scss
(+710 files in other folders)
