[package]
name = "sdq-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7", features = ["fs"] }
uuid = { version = "1.23.4", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
