[package]
name = "sdq-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
sdq-model = { path = "../model" }
sdq-service = { path = "../service" }

# External
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
strum = { version = "0.28", features = ["derive"] }
