[package]
name = "sdq-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
sdq-model = { path = "../model" }
sdq-service = { path = "../service" }

# External
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
strum = { version = "0.28", features = ["derive"] }
uuid = { version = "1.23.4", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
