[package]
name = "sdq-db"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
sdq-model = { path = "../model" }
sdq-service = { path = "../service" }

# External
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.4", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
