[package]
name = "sdq-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
uuid = { version = "1.23.4", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
